<resources>
    <string name="app_name">Profile</string>
    <string name="profile">Profile</string>
    <string name="dial">Dial</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="review">Review</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="confirmation_text">Please confirm your information:</string>
    <string name="empty">Empty</string>
    <string name="dialpad_text">Please enter phone number</string>
    <string name="open_menu">Open Menu</string>
    <string name="camera">Camera</string>
    <string name="please_enter_city_name">Please enter city name</string>
    <string name="show_prayer_times">Show Prayer Times</string>
</resources>
