<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/drawer_layout">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/btnDrawer"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@color/colorBlue"
                android:text="@string/open_menu"
                android:layout_marginTop="20dp"
                android:textColor="#FFF"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#FFF"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnProfile"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@color/colorBlue"
            android:text="@string/profile"
            android:layout_marginTop="20dp"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDial"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:background="@color/colorGreen"
            android:text="@string/dial"
            android:textColor="#FFF"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>